<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Библиотека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="to_share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_mail">evalrock92@gmail.com</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
</resources>