<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/toolbar"
        android:id="@+id/settingsToolbar"
        android:clickable="true"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/settings"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/switchTheme"
        android:id="@+id/themeSwitch"
        android:layout_marginTop="@dimen/size24"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_list_size"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"/>


    <TextView
        style="@style/settingsList"
        android:id="@+id/share"
        android:text="@string/to_share"
        app:drawableEndCompat="@drawable/share"/>

    <TextView
        style="@style/settingsList"
        android:id="@+id/support"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support"/>

    <TextView
        style="@style/settingsList"
        android:id="@+id/agreement"
        android:text="@string/agreement"
        app:drawableEndCompat="@drawable/arrow_forward"/>

</LinearLayout>